# CFDCourse26

./: .clang-format  .gitignore  .lvimrc  CMakeLists.txt  Dockerfile  cmake-format.json  docker-compose.yml  formatall.sh  readme.md
.vscode-server/data/Machine/: settings.json
doc/: Dockerfile  exam26.txt  grades.xlsx  вопросы на экзамен.txt  записи_с_лекций.txt
doc/lectures/: .gitignore  Makefile  cfd_course_26.tex  clisting.py  clisting.tex  eq-basis.tex  eq-csr.tex  eq-geometry.tex  eq-matsolve.tex  eq-partint.tex  fake_compressible.tex  howto-build.tex  howto-dbg.tex  howto-git.tex  howto-hybmesh.tex  howto-paraview.tex  hw02.tex  hw03.tex  hw04.tex  hw06.tex  hw08.tex  hw09.tex  hw10.tex  hw11.tex  hw12.tex  hw14.tex  hw16.tex  hw17.tex  hw18.tex  hw19.tex  hw20.tex  latex_defs.tex  lect01.tex  notes.tex  poisson.tex  poisson_fem.tex  poisson_fvm.tex  prog-cavity-fdm.tex  prog-fdm.tex  prog-fem.tex  (+3 more)
doc/lectures/_minted/: 00F1CB9EBDEBD8E17149327E48DFA7CA.highlight.minted  026B676A469763FEDD9A1A3215E56C54.highlight.minted  02EFA74D00544D5E24E1AF9E0620E031.highlight.minted  03C289CB6391E85E88364DAE74DE9F24.highlight.minted  03EEF664CA6EBD5DBC80676D2113136F.highlight.minted  05B9BD60EDECD497A43F160442F91746.highlight.minted  05F090D93AAFA42F3DD684498A00B5FC.highlight.minted  06001A33662D13EA9D96D3CA5D89A63B.highlight.minted  06C1A318FEE932AFFF78D8B85BD452F5.highlight.minted  0797B1C49B0B850E49E4BA99C2F746B1.highlight.minted  07AE120848783B9E92ECAC2B2A4F131B.highlight.minted  080847ACABE3DFA3223401868FA01808.highlight.minted  0AABEF64136118B0EB4915DEEE661F99.highlight.minted  0DB603A86BE2DCB98CC0739606CA1971.highlight.minted  0F1D4CC493CDD0A02AFA3FDC1D25D60C.highlight.minted  0F63B6B4E99B7A6E18220FAC477854A9.highlight.minted  1114ED521CC83689CCB68FA1C18F91E2.highlight.minted  114AEB8AB7625107564F4A79E4E976D5.highlight.minted  12EB4848341E7F553424B1FDF3452F1E.highlight.minted  156B6E58774ADEF7A84596BAC0351923.highlight.minted  171960EFDA1E0B941547B53A01FB063A.highlight.minted  1918C61559C9911DE60C51DB8F70877C.highlight.minted  1ADEDEE670029BDBBB82786B509DF641.highlight.minted  1C09F0D8EB450839EB0D8A9E4A2B88C3.highlight.minted  1C6F82A512A257B33F86DE330DA8071C.highlight.minted  1DB2ADC39642571A0A4B3AB8FD3435E7.highlight.minted  2577ADB2A233CE58E8EC1CB7F17EB21F.highlight.minted  27AACE0FEE874B2FDE7B98B74F1E3D1D.highlight.minted  297A3C31DB5447C10D9380C26A884334.highlight.minted  2A29257872E40488973F8D5B7E1CE276.highlight.minted  2CA91DEFE02494B578B5FBB33391ADB8.highlight.minted  2DB4A1B15D14EC117B3D4B8106A35BE7.highlight.minted  2EF17A2C1364E3CFB431E256C371ECFB.highlight.minted  301151CC53DC3C15B03FC00F901668E4.highlight.minted  3103B62C5EBF85F0CBF9588E6DDF3FDD.highlight.minted  31EB7DCB9EA5782423A6C48C82A7B5F8.highlight.minted  32B4EADAF08602AD149564474EED1192.highlight.minted  369CF72DC695ACA192F50AE2C2B66187.highlight.minted  37EF360E5ACAF81469C0B23C823BEABF.highlight.minted  382D4C799722E88E2CE6773CABD607B6.highlight.minted  (+138 more)
scripts/: attach_to_container.sh  docker-g++.sh  formatall.sh  rebuild_container.sh  start_doc_builder.sh  ubuntu_docker_install.sh
scripts/init/: build_hybmesh.sh  hybmesh.stab  init_container.sh
src/: CMakeLists.txt
src/cfd/: CMakeLists.txt  cfd26.cpp  cfd26.hpp  cfd_common.hpp  macros.hpp
src/cfd/debug/: grid_manip.cpp  grid_manip.hpp  printer.cpp  printer.hpp  saver.cpp  saver.hpp  tictoc.cpp  tictoc.hpp
src/cfd/fem/: fem_assembler.cpp  fem_assembler.hpp  fem_boundary.cpp  fem_boundary.hpp  fem_cross_assembler.cpp  fem_cross_assembler.hpp  fem_element.cpp  fem_element.hpp  fem_numeric_integrals.cpp  fem_numeric_integrals.hpp  fem_sorted_cell_info.cpp  fem_sorted_cell_info.hpp
src/cfd/fem/elem1d/: segment_cubic.cpp  segment_cubic.hpp  segment_linear.cpp  segment_linear.hpp  segment_quadratic.cpp  segment_quadratic.hpp
src/cfd/fem/elem2d/: quadrangle_linear.cpp  quadrangle_linear.hpp  quadrangle_quadratic.cpp  quadrangle_quadratic.hpp  triangle_cubic.cpp  triangle_cubic.hpp  triangle_linear.cpp  triangle_linear.hpp  triangle_quadratic.cpp  triangle_quadratic.hpp
src/cfd/func/: i_function.hpp  piecewise_function.hpp
src/cfd/fvm/: fvm_dfdn.cpp  fvm_dfdn.hpp  fvm_divergence.hpp  fvm_extended_collocations.cpp  fvm_extended_collocations.hpp  fvm_gradient.cpp  fvm_gradient.hpp
src/cfd/geom/: i_point_function.hpp  jacobi.cpp  jacobi.hpp  point.hpp  polygon.cpp  polygon.hpp  searcher.cpp  searcher.hpp  simplex.cpp  simplex.hpp
src/cfd/grid/: cell_finder.cpp  cell_finder.hpp  grid1d.cpp  grid1d.hpp  i_grid.cpp  i_grid.hpp  regular_grid2d.cpp  regular_grid2d.hpp  unstructured_grid2d.cpp  unstructured_grid2d.hpp  vtk.cpp  vtk.hpp
src/cfd/mat/: algebraic_bc.cpp  algebraic_bc.hpp  csrmat.cpp  csrmat.hpp  densemat.cpp  densemat.hpp  i_mat.hpp  i_sparse_mat.hpp  lodmat.cpp  lodmat.hpp  matrix_iter.hpp  sparse_matrix_solver.cpp  sparse_matrix_solver.hpp  umfpack_solver.cpp  umfpack_solver.hpp
src/cfd/numeric_integration/: numeric_integration.hpp  quadrature.cpp  quadrature.hpp  segment_quadrature.cpp  segment_quadrature.hpp  square_quadrature.cpp  square_quadrature.hpp  triangle_quadrature.cpp  triangle_quadrature.hpp
src/test/: CMakeLists.txt  bl_fvm_test.cpp  cavity_fdm_test.cpp  cavity_fem_direct_test.cpp  cavity_fem_simple_test.cpp  cavity_fvm_coupled_test.cpp  cavity_fvm_test.cpp  cfd26_test.cpp  cfd26_test.hpp  cylinder_fvm_test.cpp  cylinder_fvm_test_old.cpp  cylinder_stat_fvm_test.cpp  fem_test.cpp  geom_test.cpp  gravity_multiphase_test.cpp  grid_test.cpp  heat_fem_simple_test.cpp  infra_test.cpp  mat_test.cpp  poiseuille_fvm_test.cpp  poisson_fdm_test.cpp  poisson_fem_test.cpp  poisson_fvm_test.cpp  transport_fdm_test.cpp  transport_fem_test.cpp  transport_fvm_test.cpp  transport_nonlinear_test.cpp  transport_supg_test.cpp
src/test/utils/: filesystem.cpp  filesystem.hpp  vecmat.cpp  vecmat.hpp
test_data/: cylgrid.py  cylgrid_vertical.py  cylgrid_vertical.vtk  cylgrid_vertical_3k.vtk  hexagrid.py  pebigrid.py  radial.py  radial_500.vtk  tetra3dgrid.py  tetra3dgrid.vtk  tetragrid.py  trigrid.py  trigrid_10000.vtk  trigrid_2000.vtk
(+1 files in other folders)
